# mini_supervisor

./: .gitignore  CMakeLists.txt  config.cpp  config.hpp  file_descriptor.cpp  file_descriptor.hpp  http_server.cpp  http_server.hpp  main  main.cpp  mini_supervisorctl.cpp  process.cpp  process.hpp  service.cpp  service.hpp  services.conf  supervisor.cpp  supervisor.hpp  workers.json
configs/: services.json
include/: http_server.hpp  process.hpp  service.hpp  supervisor.hpp
src/: config.cpp  http_server.cpp  main.cpp
workers/: crash_worker.cpp  ignore_term.cpp  logger.cpp  memory_worker.cpp
